--- a/web-for-crush/1/css/style.css
+++ b/web-for-crush/1/css/style.css
@@ -1,50 +1,75 @@
 .content {
     position: relative;
     z-index: 3;
-  }
-  #no{
+}
+
+.content header {
+    height: 95vh;
+}
+
+#no {
     position: absolute;
     display: inline-block;
-    left: 35%; 
+    right: 55%;
     top: 40vh;
     -webkit-transition: all 0.1s ease-out;
-  }
-  #yes{
+}
+
+#yes {
     position: absolute;
     display: inline-block;
-    left: 70%; 
+    left: 55%;
     top: 40vh;
     -webkit-transition: all 0.3s ease-out;
-  }
-#bg{
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: .8;
-  /* height: 100vh; */
-  z-index: 0;
-  background-repeat: no-repeat;
-  background-image: url(../img/puung3.jpg);
-  background-size: cover;
-  background-position: 50%;
-  -webkit-filter: blur(4px);
+    z-index: 2;
 }
-.swal2-title, .swal2-content{
-  color: azure !important;
+
+#bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: .8;
+    /* height: 100vh; */
+    z-index: 0;
+    background-repeat: no-repeat;
+    background-image: url(../img/puung3.jpg);
+    background-size: cover;
+    background-position: 50%;
+    -webkit-filter: blur(4px);
 }
+
+.swal2-title, .swal2-content {
+    color: azure !important;
+}
+
 .swal2-popup {
-  border-radius: 15px !important;
+    border-radius: 15px !important;
 }
 
 header h2 {
-  font-family: 'Pacifico';
-  font-size: 80px;
-  text-align: center;
-	margin-bottom: 30px;
+    font-family: 'Pacifico';
+    font-size: 80px;
+    text-align: center;
+    margin-bottom: 30px;
 }
+
 header h4 {
-  font-family: 'Pacifico';
-  text-align: center;
+    font-family: 'Pacifico';
+    text-align: center;
+}
+
+
+@media only screen and (max-width: 600px) {
+    #no {
+        left: 30%;
+        top: 70vh;
+    }
+
+    #yes {
+        left: 20%;
+        top: 60vh;
+    }
+
 }
